Scope admin visibility to the admin's own franchise group
Admins could previously see and modify data across every restaurant in
the system (locations, staff, offers, rewards, campaigns, reports,
performance, dashboard, reviews, redemptions, receipt claims, etc.)
instead of just their own restaurant and its franchise locations.

- Add Restaurant.mainRestaurantId (nullable self-FK): a franchise
  location points at its main restaurant; a standalone restaurant or
  the main restaurant itself has it null.
- Add AdminLocationAccessService: resolves the current admin's own
  restaurant, computes their accessible restaurant id set (self +
  franchises), and validates/scopes requested location ids.
- Wire every admin controller/service that queried "all locations" or
  accepted a raw locationId/restaurantId to go through this service,
  closing both the "sees everything" issue and IDOR gaps where an
  admin could read or mutate another restaurant's records by id.
- Add ReportRecord.generatedByRestaurantId to scope report
  listing/download the same way for reports with no specific location.

Guest and staff/restaurant-role single-location flows are untouched.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_012uDbFXVbxDiP1aLFSJD926